Added notification button to MapsActivity and began creating expandable list for Notifications

--- a/MarcoPoloApp/app/src/main/res/layout/activity_maps.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/activity_maps.xml
@@ -23,7 +23,7 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="54dp"
-            android:text="MARCO"
+            android:text="@string/marco"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
     </RelativeLayout>
 
