--- a/MarcoPoloApp/app/src/main/res/menu/navigation_menu.xml
+++ b/MarcoPoloApp/app/src/main/res/menu/navigation_menu.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/nav_account"
-        android:title="My Account"/>
+    <item
+        android:id="@+id/nav_account"
+        android:icon="@android:drawable/ic_menu_compass"
+        android:title="@string/account" />
 
-    <item android:id="@+id/nav_settings"
-        android:title="Settings"/>
+    <item
+        android:id="@+id/nav_settings"
+        android:icon="@android:drawable/ic_menu_edit"
+        android:title="@string/action_settings"
+        app:showAsAction="never" />
 
-    <item android:id="@+id/nav_more"
-        android:title="More"/>
+    <item
+        android:id="@+id/nav_notifications"
+        android:icon="@android:drawable/ic_popup_reminder"
+        android:title="@string/notifications"
+        app:showAsAction="ifRoom" />
 
 </menu>
