--- a/MarcoPoloApp/app/src/main/res/layout/notification_children.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/notification_children.xml
@@ -9,5 +9,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="10dp"/>
+        android:layout_marginLeft="10dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"/>
 </RelativeLayout>
