--- a/MarcoPoloApp/app/src/main/res/layout/notification_groups.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/notification_groups.xml
@@ -7,6 +7,7 @@
         android:id="@+id/heading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="35sp"/>
+        android:paddingLeft="35sp"
+        android:textAppearance="?android:attr/textAppearanceLarge"/>
 
 </LinearLayout>
