--- a/MarcoPoloApp/app/src/main/res/layout/activity_maps.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/activity_maps.xml
@@ -13,8 +13,10 @@
         tools:context="com.polo.marco.marcopoloapp.MapsActivity" />
 
     <RelativeLayout
+        android:id="@+id/main_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <Button
             android:id="@+id/btn_marco"
@@ -28,6 +30,7 @@
     </RelativeLayout>
 
     <android.support.design.widget.NavigationView
+        android:id="@+id/main_drawer"
         android:layout_height="match_parent"
         android:layout_width="wrap_content"
         app:menu= "@menu/navigation_menu"
