--- a/MarcoPoloApp/app/src/main/res/menu/navigation_menu.xml
+++ b/MarcoPoloApp/app/src/main/res/menu/navigation_menu.xml
@@ -8,6 +8,10 @@
         android:title="@string/account" />
 
     <item
+        android:id="@+id/nav_friends"
+        android:title="@string/friends" />
+
+    <item
         android:id="@+id/nav_settings"
         android:icon="@android:drawable/ic_menu_edit"
         android:title="@string/action_settings"
