--- a/MarcoPoloApp/app/src/main/res/layout/activity_login.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/activity_login.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/vertical_background"
     android:orientation="vertical"
-    tools:context="com.polo.marco.marcopoloapp.Login"
-    android:background="@drawable/vertical_background">
+    tools:context="com.polo.marco.marcopoloapp.activities.LoginActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,7 +23,7 @@
             app:srcCompat="@drawable/login_logo" />
 
         <!--android:contentDescription="Marco Polo Logo"-->
-            <!--tools:ignore="HardcodedText" />-->
+        <!--tools:ignore="HardcodedText" />-->
     </LinearLayout>
 
     <RelativeLayout
@@ -31,13 +31,25 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
+
         <com.google.android.gms.common.SignInButton
             android:id="@+id/sign_in_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true" >
+            android:layout_width="205dp"
+            android:layout_height="35dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true">
 
         </com.google.android.gms.common.SignInButton>
+
+        <com.facebook.login.widget.LoginButton
+            android:id="@+id/facebook_login_button"
+            android:layout_width="230dp"
+            android:layout_height="40dp"
+            android:layout_below="@+id/sign_in_button"
+            android:layout_marginTop="6dp"
+            android:layout_centerHorizontal="true"
+        />
+
     </RelativeLayout>
 
 </LinearLayout>
