--- a/MarcoPoloApp/app/src/main/res/layout/activity_maps.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/activity_maps.xml
@@ -10,7 +10,7 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.polo.marco.marcopoloapp.MapsActivity" />
+        tools:context="com.polo.marco.marcopoloapp.activities.MapsActivity" />
 
     <RelativeLayout
         android:id="@+id/main_content"
