--- a/MarcoPoloApp/app/src/main/res/values/colors.xml
+++ b/MarcoPoloApp/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="white">#ffffff</color>
     <color name="seaBlue">#a0d3d3</color>
     <color name="grassGreen">#afca89</color>
     <color name="colorAccent">#afca89</color>
