--- a/MarcoPoloApp/app/src/main/res/layout/activity_maps.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/activity_maps.xml
@@ -25,8 +25,10 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="53dp"
+            android:background="@drawable/marco_button"
+            android:textColor="@color/white"
             android:onClick="onClickBtnMarco"
-            android:text="MARCO"
+            android:text="@string/marco"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 
         <Switch
