--- a/MarcoPoloApp/app/src/main/res/layout/activity_friends_list.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/activity_friends_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.polo.marco.marcopoloapp.FriendsList">
+    tools:context="com.polo.marco.marcopoloapp.activities.FriendsList">
 
     <ListView
         android:id="@+id/friendsListView"
