--- a/MarcoPoloApp/app/src/main/res/layout/friends_list_layout.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/friends_list_layout.xml
@@ -10,32 +10,28 @@
         android:id="@+id/friendslist_profile_image"
         android:layout_width="127dp"
         android:layout_height="106dp"
-        android:maxWidth="80dp"
-        app:srcCompat="@drawable/com_facebook_profile_picture_blank_square"
-        tools:maxHeight="80dp"
-        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:maxWidth="80dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp" />
+        app:srcCompat="@drawable/com_facebook_profile_picture_blank_square"
+        tools:maxHeight="80dp" />
 
     <TextView
         android:id="@+id/friendslist_user_name"
         android:layout_width="140dp"
         android:layout_height="25dp"
         android:layout_alignParentTop="true"
+        android:layout_marginTop="8dp"
         android:layout_toEndOf="@+id/friendslist_profile_image"
         android:text="TextView"
         android:textSize="20sp"
-        tools:text="David Rodriguez"
         app:layout_constraintLeft_toRightOf="@+id/friendslist_profile_image"
-        android:layout_marginLeft="0dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintRight_toLeftOf="@+id/button2"
-        android:layout_marginRight="8dp"
-        app:layout_constraintHorizontal_bias="0.0" />
+        tools:text="David Rodriguez" />
 
     <TextView
         android:id="@+id/friendslist_last_login"
@@ -43,24 +39,27 @@
         android:layout_height="0dp"
         android:layout_alignBottom="@+id/friendslist_profile_image"
         android:layout_marginLeft="8dp"
+        android:layout_marginTop="60dp"
         android:layout_toEndOf="@+id/friendslist_profile_image"
         android:text="Last Marco: 10/09"
-        android:textSize="16sp"
+        android:textSize="14sp"
         app:layout_constraintLeft_toRightOf="@+id/friendslist_profile_image"
-        app:layout_constraintRight_toLeftOf="@+id/button2"
-        android:layout_marginRight="8dp"
-        app:layout_constraintHorizontal_bias="1.0"
-        android:layout_marginTop="62dp"
         app:layout_constraintTop_toBottomOf="@+id/friendslist_user_name" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="105dp"
-        android:layout_height="106dp"
-        android:layout_marginRight="8dp"
+        android:layout_width="95dp"
+        android:layout_height="66dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
-        android:text="Marco!"
-        app:layout_constraintRight_toRightOf="parent"
+        android:background="@drawable/marco_button"
+        android:text="@string/marco"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textColor="@color/white"
+        android:textSize="26sp"
+        app:layout_constraintBottom_toBottomOf="@+id/friendslist_last_login"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
