--- a/MarcoPoloApp/app/src/main/res/layout/marco_activity.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/marco_activity.xml
@@ -12,8 +12,8 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="18dp"
-        android:text="Private Mode"
-        android:textSize="18sp" />
+        android:text="Private"
+        android:textSize="16sp" />
 
     <EditText
         android:id="@+id/marcoText"
@@ -48,11 +48,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:background="@color/poloRed"
-        android:layout_margin="5dp"
-        android:layout_alignBottom="@+id/marcoText"
-        android:padding="5dp"
-        android:text="Testing, testing..."
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="5dp"
+        android:layout_below="@+id/marcoText"
+        android:text="Choose friends to message:"
         android:visibility="gone"/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="240dp"
+        android:layout_below="@+id/textView1">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:id="@+id/check_layout"
+            android:layout_margin="10dp">
+
+        </LinearLayout>
+    </ScrollView>
 
 </RelativeLayout>
