--- a/MarcoPoloApp/app/src/main/res/drawable/splash.xml
+++ b/MarcoPoloApp/app/src/main/res/drawable/splash.xml
@@ -7,7 +7,7 @@
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@drawable/splash_logo"/>
+            android:src="@drawable/ic_launcher"/>
     </item>
 
 </layer-list>
