--- a/MarcoPoloApp/app/src/main/res/layout/activity_marco.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/activity_marco.xml
@@ -1,70 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:animateLayoutChanges="true"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
     android:background="@color/grassGreen">
+
+    <TextView
+        android:id="@+id/marco_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="@color/colorPrimary"
+        android:text="@string/marco_title"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/publicText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/marcoText"
+        android:layout_alignBottom="@+id/switch_public"
+        android:layout_alignTop="@+id/switch_public"
+        android:layout_marginStart="16dp"
+        android:layout_toEndOf="@+id/switch_public"
+        android:gravity="center_vertical|center_horizontal"
+        android:text="@string/marco_switch_private"
+        android:textAllCaps="false"
+        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
+        android:textColor="@color/colorPrimaryDark" />
 
     <Switch
         android:id="@+id/switch_public"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="false"
+        android:layout_alignParentTop="false"
+        android:layout_below="@+id/marco_title"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="18dp"
-        android:text="Private"
+        android:layout_marginTop="10dp"
         android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/privateText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/marcoText"
+        android:layout_alignBottom="@+id/switch_public"
+        android:layout_alignParentEnd="false"
+        android:layout_alignTop="@+id/switch_public"
+        android:layout_marginEnd="16dp"
+        android:layout_toStartOf="@+id/switch_public"
+        android:gravity="center_vertical|center_horizontal"
+        android:text="@string/marco_switch_public"
+        android:textAllCaps="false"
+        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
+        android:textColor="@color/colorPrimaryDark" />
 
     <EditText
         android:id="@+id/marcoText"
-        android:background="@color/MarcoBlue"
         android:layout_width="match_parent"
         android:layout_height="160sp"
         android:layout_below="@+id/switch_public"
-        android:layout_marginTop="10sp"
         android:layout_marginLeft="10sp"
         android:layout_marginRight="10sp"
-        android:gravity="top|left"
-        android:hint="What would you like to say?" />
+        android:layout_marginTop="10sp"
+        android:background="@color/streetGray"
+        android:gravity="top|start"
+        android:hint="@string/marco_message_hint"
+        android:textColor="@color/colorPrimaryDark" />
 
-    <Button
-        android:id="@+id/sendMarco"
-        android:onClick="onClickSendMarco"
-        android:text="Send"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"/>
-    <Button
-        android:id="@+id/cancelMarco"
-        android:onClick="onClickCancelMarco"
-        android:text="Cancel"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/button_bar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@+id/sendMarco"/>
+        android:elevation="14dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/cancelMarco"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:elevation="12dp"
+            android:onClick="onClickCancelMarco"
+            android:text="@string/cancel"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textColor="@color/white" />
+
+        <Button
+            android:id="@+id/sendMarco"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:elevation="12dp"
+            android:onClick="onClickSendMarco"
+            android:text="@string/send"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textColor="@color/white" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="5dp"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/marcoText"
-        android:text="Choose friends to message:"
-        android:visibility="gone"/>
+        android:layout_marginBottom="5dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/marco_friends_list"
+        android:visibility="gone" />
 
     <ScrollView
+        android:id="@+id/friends_list"
         android:layout_width="match_parent"
         android:layout_height="240dp"
         android:layout_below="@+id/textView1">
+
         <LinearLayout
+            android:id="@+id/check_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:id="@+id/check_layout"
-            android:layout_margin="10dp">
+            android:layout_margin="10dp"
+            android:orientation="vertical">
 
         </LinearLayout>
     </ScrollView>
