--- a/MarcoPoloApp/app/src/main/res/values/styles.xml
+++ b/MarcoPoloApp/app/src/main/res/values/styles.xml
@@ -26,5 +26,7 @@
         <item name="android:windowCloseOnTouchOutside">true</item>
         <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
+        <item name="colorAccent">@color/colorPrimary</item>
     </style>
+
 </resources>
