--- a/MarcoPoloApp/app/src/main/res/layout/activity_settings.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/activity_settings.xml
@@ -9,6 +9,22 @@
         android:layout_alignParentStart="true">
 
         <Button
+            android:id="@+id/sync_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="Sync Contacts"
+            android:onClick="onClickSyncContacts"/>
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:indeterminate="true"
+            android:visibility="invisible" />
+
+        <Button
             android:id="@+id/button4"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
