--- a/MarcoPoloApp/app/src/main/res/layout/activity_friends_list.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/activity_friends_list.xml
@@ -1,15 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.polo.marco.marcopoloapp.activities.FriendsList">
+    tools:context="com.polo.marco.marcopoloapp.activities.FriendsListActivity">-->
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:animateLayoutChanges="true"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <ListView
-        android:id="@+id/friendsListView"
-        android:layout_width="368dp"
-        android:layout_height="495dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp" />
-</android.support.constraint.ConstraintLayout>
+    <EditText
+        android:id="@+id/searchBar"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="12dp"
+        android:layout_marginBottom="16dp"
+        android:hint="search all Users" />
+
+    <Button
+        android:id="@+id/searchButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginRight="12dp"
+        android:layout_marginBottom="16dp"
+        android:gravity="center_horizontal"
+        android:onClick="onClickSearch"
+        android:text="Search"
+        android:layout_toRightOf="@+id/searchBar" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/searchBar">
+
+        <LinearLayout
+            android:clickable="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:id="@+id/friends_layout"
+            android:layout_margin="10dp">
+
+        </LinearLayout>
+        <!--<ListView
+            android:id="@+id/friendsListView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="8dp"-->
+
+    </ScrollView>
+</RelativeLayout>
+
+<!--</android.support.constraint.ConstraintLayout>-->
