--- a/MarcoPoloApp/app/src/main/res/layout/activity_custom_dialog.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/activity_custom_dialog.xml
@@ -12,7 +12,8 @@
         android:layout_marginLeft="40dp"
         android:onClick="onClickAddFound"
         android:gravity="center_horizontal"
-        android:layout_centerVertical="true"/>
+        android:layout_alignParentLeft="true"
+        android:visibility="gone"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -21,7 +22,36 @@
         android:text="Block"
         android:onClick="onClickBlockFound"
         android:gravity="center_horizontal"
+        android:layout_alignParentRight="true"
+        android:visibility="gone"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/unblock_found"
+        android:text="Unblock"
+        android:onClick="onClickUnblockFound"
+        android:gravity="center_horizontal"
+        android:layout_alignParentRight="true"
+        android:visibility="gone"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/unfriend_found"
+        android:text="Unfriend"
+        android:onClick="onClickUnfriendFound"
+        android:gravity="center_horizontal"
+        android:layout_alignParentLeft="true"
+        android:visibility="gone"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/cancel_found"
+        android:text="Cancel"
+        android:onClick="onClickCancelFound"
         android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/add_found"/>
+        android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
