--- a/MarcoPoloApp/app/src/main/res/layout/activity_friends_list.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/activity_friends_list.xml
@@ -41,7 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:id="@+id/friends_layout"
+            android:id="@+id/friends_layout_child"
             android:layout_margin="10dp">
 
         </LinearLayout>
