--- a/MarcoPoloApp/app/src/main/res/layout/activity_settings.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/activity_settings.xml
@@ -3,69 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
-
-        <Button
-            android:id="@+id/sync_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text="Sync Contacts"
-            android:onClick="onClickSyncContacts"/>
-
-        <ProgressBar
-            android:id="@+id/progress_bar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:indeterminate="true"
-            android:visibility="invisible" />
-
-        <ScrollView
-            android:id="@+id/my_marco_scroll_box"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/sync_button">
-            <TextView
-                android:id="@+id/my_marco_text_view"
-                android:layout_width="300dp"
-                android:layout_height="150dp"
-                android:visibility="gone"
-                android:layout_centerInParent="true"/>
-        </ScrollView>
-
-        <Button
-            android:id="@+id/delete_marco"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@+id/my_marco_scroll_box"
-            android:text="Delete My Marco"
-            android:onClick="onClickDeleteMarco"
-            android:enabled="false"/>
-
-        <Button
-            android:id="@+id/button4"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="40dp"
-            android:onClick="onClickSignOut"
-            android:text="Sign out" />
-    </RelativeLayout>
-
     <ImageView
         android:id="@+id/settings_imageView"
         android:layout_width="@dimen/com_facebook_profilepictureview_preset_size_normal"
         android:layout_height="@dimen/com_facebook_profilepictureview_preset_size_normal"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="85dp"
+        android:layout_marginTop="50dp"
         app:srcCompat="@drawable/com_facebook_profile_picture_blank_square" />
 
     <TextView
@@ -74,16 +18,18 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/settings_imageView"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="69dp"
+        android:layout_marginTop="20dp"
         android:text="TextView"
-        android:textSize="18sp" />
+        android:textSize="28sp" />
 
     <ImageView
         android:id="@+id/settings_logged_in_as"
+        android:layout_below="@+id/settings_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:layout_marginTop="20dp"
         app:srcCompat="@drawable/com_facebook_button_icon_blue" />
 
     <TextView
@@ -92,8 +38,74 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/settings_logged_in_as"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="37dp"
+        android:layout_marginTop="20dp"
         android:text="TextView"
-        android:textSize="14sp" />
+        android:textSize="20sp" />
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:indeterminate="true"
+        android:visibility="invisible" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/marco_description"
+        android:layout_below="@+id/settings_user_email"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="15dp"
+        android:text="Most recent Marco:"
+        android:visibility="invisible"/>
+
+    <ScrollView
+        android:id="@+id/my_marco_scroll_box"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_below="@+id/marco_description">
+        <TextView
+            android:id="@+id/my_marco_text_view"
+            android:layout_width="300dp"
+            android:layout_height="500dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="25dp"
+            android:visibility="gone"
+            android:layout_centerInParent="true"
+            android:background="@color/MarcoBlue"/>
+    </ScrollView>
+
+    <Button
+        android:id="@+id/delete_marco"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="30dp"
+        android:layout_below="@+id/my_marco_scroll_box"
+        android:text="Delete My Marco"
+        android:onClick="onClickDeleteMarco"
+        android:enabled="false"/>
+
+    <Button
+        android:id="@+id/sync_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text="Sync Contacts"
+        android:layout_below="@+id/delete_marco"
+        android:onClick="onClickSyncContacts"/>
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
+        android:onClick="onClickSignOut"
+        android:text="Sign out" />
 
 </RelativeLayout>
