--- a/MarcoPoloApp/app/src/main/res/layout/notification_groups.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/notification_groups.xml
@@ -8,6 +8,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="35sp"
-        android:textAppearance="?android:attr/textAppearanceLarge"/>
+        android:textSize="18sp"/>
 
 </LinearLayout>
