Created a new activity for the help menu

--- a/MarcoPoloApp/app/src/main/res/menu/navigation_menu.xml
+++ b/MarcoPoloApp/app/src/main/res/menu/navigation_menu.xml
@@ -22,5 +22,8 @@
         android:icon="@android:drawable/ic_lock_idle_lock"
         android:title="@string/privacy_policy"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/nav_help"
+        android:title="Help" />
 
 </menu>
