--- a/MarcoPoloApp/app/src/main/res/layout/notification_children.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/notification_children.xml
@@ -12,5 +12,6 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:textColor="@color/veryDarkGray"/>
 </RelativeLayout>
