--- a/MarcoPoloApp/app/src/main/res/values/styles.xml
+++ b/MarcoPoloApp/app/src/main/res/values/styles.xml
@@ -29,4 +29,14 @@
         <item name="colorAccent">@color/colorPrimary</item>
     </style>
 
+    <style name="Theme.AppCompat.Translucent" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation</item>
+        <item name="android:windowCloseOnTouchOutside">true</item>
+        <item name="android:windowActionBar">false</item>
+    </style>
+
 </resources>
